--- a/BONUS/components/home/view.html
+++ b/BONUS/components/home/view.html
@@ -2,7 +2,7 @@
     <!-- START_CUSTOM_CODE_home -->
     <!-- Add custom code here. For more information about custom code, see http://docs.telerik.com/platform/screenbuilder/troubleshooting/how-to-keep-custom-code-changes -->
     <!-- END_CUSTOM_CODE_home -->
-    <div id="fondoinicio">
+    <!--div id="fondoinicio">
         <img src="img/imagen-de-ingreso.png" style="width:100%" />
     </div>
     <div id="inicio">
@@ -24,5 +24,11 @@
                 <button type="button" data-bind="events: { click: homeModel.sesion }" class="btn btn-default col-xs-8 col-xs-offset-2 azul borde">Aceptar</button>
             </div>
         </form>
+    </div-->
+    
+    <div>
+        REVISTA
     </div>
+    </div>
+    
 </div>
