--- a/BONUS/components/home/view.html
+++ b/BONUS/components/home/view.html
@@ -1,4 +1,4 @@
-<div data-role="view" data-title="Inicio" data-layout="inicio" data-model="app.home" data-show="app.home.onShow" data-after-show="app.home.afterShow">
+<div id="catagolo" data-role="view" data-title="Inicio" data-layout="inicio" data-model="app.home" data-show="app.home.onShow" data-after-show="app.home.afterShow" data-zoom="true">
     <!-- START_CUSTOM_CODE_home -->
     <!-- Add custom code here. For more information about custom code, see http://docs.telerik.com/platform/screenbuilder/troubleshooting/how-to-keep-custom-code-changes -->
     <!-- END_CUSTOM_CODE_home -->
@@ -25,10 +25,164 @@
             </div>
         </form>
     </div-->
-    
-    <div>
-        REVISTA
+    <div id="example">
+        <div id="wrap" class="first-page">
+            <ul id="book">
+                <!--                 <li><img src="components/pageturn/maserati.jpg" alt="Page 6" />
+                </li>
+                <li><img src="components/pageturn/mazda.jpg" alt="Page 5" />
+                </li>
+                <li><img src="components/pageturn/mercedes.jpg" alt="Page 4" />
+                </li>
+                <li><img src="components/pageturn/audi.jpg" alt="Page 3" />
+                </li>
+                <li><img src="components/pageturn/ferrari.jpg" alt="Page 2" />
+                </li>
+                <li><img src="components/pageturn/imagen2.jpg" alt="Imagen 2" />
+                </li>
+                <li><img src="components/pageturn/imagen1.jpg" alt="Imagen 1" />
+                </li>
+                <li><img src="components/pageturn/imagen3.png" alt="Imagen 3" />
+                </li>
+                <li class="current"><img src="components/pageturn/mini.jpg" alt="Page 1" />
+                </li> -->
+                <li><img src="components/pageturn/4.jpg" alt="Page 4" />
+                </li>
+                <li><img src="components/pageturn/3.jpg" alt="Page 3" />
+                </li>
+                <li><img src="components/pageturn/2.jpg" alt="Page 2" />
+                </li>
+                <li class="current"><img src="components/pageturn/1.jpg" alt="Page 1" />
+                </li>
+            </ul>
+            <a href="#" id="previous">Previous page</a>
+            <a href="#" id="next">Next page</a>
+        </div>
+        <script>
+            $("#wrap").css("width", ($(window).width()) + "px");
+            $("#wrap").css("height", ($(window).height() - 60) + "px");
+            $("#book").css("height", ($(window).height() - 60) + "px");
+
+            function current(page) {
+
+                var book = $("#book"),
+                    pages = book.children(),
+                    pagesCount = pages.length,
+                    current = pages.filter(".current"),
+                    currentIndex = pagesCount - current.index(),
+                    newPage;
+
+                if (!arguments.length) {
+                    return currentIndex;
+                }
+
+                if (book.data("animating")) {
+                    return;
+                }
+
+                $("#wrap").toggleClass("first-page", page == 1)
+                    .toggleClass("last-page", page == pagesCount);
+
+                if (page != currentIndex) {
+                    current.removeClass("current");
+                    newPage = pages.eq(pagesCount - page).addClass("current");
+
+                    if (page > currentIndex) {
+                        kendo.fx(book).pageturnHorizontal(current, newPage).duration(1500).play();
+                    } else {
+                        kendo.fx(book).pageturnHorizontal(newPage, current).duration(1500).reverse();
+                    }
+                }
+            }
+
+            $("#previous").click(function (e) {
+                e.preventDefault();
+                current(Math.max(1, current() - 1));
+            });
+
+            $("#next").click(function (e) {
+                e.preventDefault();
+                current(Math.min(4, current() + 1));
+            });
+            $("#wrap").kendoTouch({
+                enableSwipe: true,
+                swipe: function (e) {
+                    if (e.direction == "left") {
+                        e.preventDefault();
+                        //Si colocamos Math.min(...  mas de la cantidad de imágenes regresa al incio en el final  
+                        current(Math.min(4, current() + 1));
+                    } else {
+                        e.preventDefault();
+                        current(Math.max(1, current() - 1));
+                    }
+                }
+            });
+        </script>
+        <style>
+            #book li img {
+                width: 100%;
+                height: 95%;
+                overflow: hidden !important;
+                resize: both;
+            }
+            #wrap {
+                background-image: url("components/pageturn/book.png");
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+                width: 375px;
+                height: 510px;
+                position: relative;
+            }
+            #book {
+                position: relative;
+                width: 94%;
+                height: 480px;
+                margin: 0 auto;
+                padding: 30px 0px 0px 0px;
+                list-style-type: none;
+            }
+            #book > li {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background-color: transparent;
+            }
+            #actions {
+                overflow: hidden;
+                margin: 0 auto 3em;
+                width: 650px;
+                background-color: red;
+            }
+            #previous,
+            #next {
+                text-decoration: none;
+                text-indent: -999em;
+                overflow: hidden;
+                display: block;
+                height: 100%;
+                width: 90px;
+                position: absolute;
+                top: 0;
+                background-repeat: no-repeat;
+                background-position: 50% 50%;
+                opacity: .5
+            }
+            #previous:hover,
+            #next:hover {
+                opacity: 1;
+            }
+            #previous {
+                left: 0;
+                background-image: url("components/pageturn/arrow-left.png");
+            }
+            #next {
+                right: 0;
+                background-image: url("components/pageturn/arrow-right.png");
+            }
+            .first-page #previous,
+            .last-page #next {
+                display: none;
+            }
+        </style>
     </div>
-    </div>
-    
 </div>
