--- a/BONUS/components/puntos/view.html
+++ b/BONUS/components/puntos/view.html
@@ -1,26 +1,39 @@
 <div data-role="view" data-title="Puntos" data-layout="main" data-model="app.puntos" data-show="app.puntos.onShow" data-after-show="app.puntos.afterShow">
     <div id="puntosModel" class="form-view">
-        <div class="imagenpagina">
+        <div class="imagenpagina centro">
             <img src="img/lupa.png">
             <h2>Consulta de Puntos</h2>
         </div>
-        <form class="formulario">
-            <ul class="form-content" data-role="listview" data-style="inset">
-                <li>
-                    <label>Documento
-                        <select data-bind="value: puntosModel.fields.pundocumento" data-role="dropdownlist">
-                            <option value="First Option">First Option</option>
-                            <option value="Second Option">Second Option</option>
-                            <option value="Third Option">Third Option</option>
-                        </select>
-                    </label>
-                </li>
-            </ul>
-            <div class="button-group">
-                <a class="btn borde" data-role="button" data-bind="events: { click: puntosModel.cancel }">Cancelar</a>
-                <a class="primary btn btn-default azul borde" data-role="button" data-bind="events: { click: puntosModel.submit }">Buscar</a>
-            </div>
-        </form>
+        <div id="inicio">
+            <form class="formulario form-group pagina">
+                <ul class="form-content" data-role="listview" data-style="inset">
+                    <li>
+                        <div class="negro centro">Documento
+                        </div>
+                        <div class="col-xs-3 alta">
+                            <input type="radio" name="fruit" value="Apple" data-bind="checked: radioValue" /> DNI
+                        </div>
+                        <div class="col-xs-3 alta">
+                            <input type="radio" name="fruit" value="Banana" data-bind="checked: radioValue" /> CE
+                        </div>
+                        <div class="col-xs-6 alta">
+                            <input type="radio" name="fruit" value="Orange" data-bind="checked: radioValue" /> Pasaporte
+                        </div>
+                    </li>
+                    <li>
+                        <div class="col-xs-8">
+                            <input data-bind="value: puntosModel.fields.busnumero" type="text" id="puntnumero">
+                        </div>
+                        <div class="col-xs-4">
+                            <img src="img/camara.png" onclick="camara('#puntnumero')">
+                        </div>
+                    </li>
+                </ul>
+                <div class="col-xs-8 col-xs-offset-2 boton">
+                    <a class="primary btn btn-default col-xs-8 col-xs-offset-2" data-role="button" data-bind="events: { click: puntosModel.submit }">Buscar</a>
+                </div>
+            </form>
+        </div>
         <!-- START_CUSTOM_CODE_puntosModel -->
         <!-- Add custom code here. For more information about custom code, see http://docs.telerik.com/platform/screenbuilder/troubleshooting/how-to-keep-custom-code-changes -->
         <!-- END_CUSTOM_CODE_puntosModel -->
