--- a/BONUS/components/home/view.html
+++ b/BONUS/components/home/view.html
@@ -126,7 +126,9 @@
                 resize: both;
             }
             #wrap {
-                background-image: url("components/pageturn/book.png");
+                /*                 Se comentó esto a pedido de Jhon */
+                /*                 background-image: url("components/pageturn/book.png"); */
+                
                 background-repeat: no-repeat;
                 background-size: 100% 100%;
                 width: 375px;
