--- a/BONUS/styles/css.css
+++ b/BONUS/styles/css.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Oxygen);
 div {
-    font-family: 'Oxygen', sans-serif;
+    font-family: 'Oxygen', sans-serif !important;
 }
 div#appDrawer header img {
     width: 180px;
@@ -16,17 +16,16 @@ div#appDrawer header img {
     background: transparent;
     width: 100%;
 }
-
 .btn {
-    border-radius: 20px!important;
+    border-radius: 10px!important;
     padding: 10px!important;
-    border: 1px solid #212f61;
-    font-size: 22px;
+    border: 0;
+    font-size: 28px;
+    box-shadow: 8px 8px 20px 2px rgba(0, 0, 0, 0.75);
 }
 body {
-    color:#727176;
-} 
-
+    color: #727176;
+}
 #kendoUiMobileApp.km-flat .km-drawer .km-content {
     background-color: inherit;
 }
@@ -37,31 +36,66 @@ body {
     margin-left: 16.66666667%!important;
 }
 .formulario {
+    width:100%;
     float: left;
 }
 .formulario .km-list label,
 .formulario .km-list input,
 .formulario .km-list select,
 .k-input {
-    font-size: 22px!important;
+    font-size: 16px!important;
     font-weight: normal;
 }
 .formulario .km-list label {
-    text-align: center;
-    width: 100%!important;
+    width: 100%;
+}
+.botonmas {
+    background: #ddd;
+    border: 1px solid #bbb;
+    border-radius: 10px;
+    padding:.3em .6em;
+    font-weight:bolder;
+}
+.mas{
+        margin-top:13px;
+}
+.km-flat .km-list .k-dropdown-wrap {
+    padding: 0;
+}
+#inicio .formulario .km-list label,
+#inicio .formulario .km-list input,
+#inicio .formulario .km-list span.k-dropdown-wrap>span {
+    font-size: 22px!important;
+}
+.km-flat .km-list .k-dropdown-wrap>span {
+    padding: .25em;
+}
+label.col-xs-2{
+    width:16.66666667%!important;
+}
+.km-flat .km-list .k-dropdown {
+    margin-top: 5px!important;
+}
+.formulario div#tabstrip .km-list input,
+div.gruporadio {
+    height: 35px;
+}
+.formulario div#tabstrip .km-list input[type="radio"] {
+    width: 20px!important;
+    height: 20px!important;
 }
 .formulario .km-list li {
     border: none!important;
     background: transparent;
 }
 .formulario .km-list input,
-.formulario .km-list input[type=date],
-.formulario .km-list select {
+.formulario .km-list input[type=date] {
     margin-top: 5px!important;
     text-align: center;
     width: 100%!important;
     position: inherit!important;
-    border-bottom: 2px solid #0056B3!important;
+    background: #c9d9eb !important;
+    border-radius: 15px;
 }
 .titulo {
     margin-top: 40px;
@@ -77,14 +111,24 @@ h2.azul {
     margin-top: 0;
 }
 .amarillo {
-    color: #f0e42f;
+    color: #ffd100;
 }
 .azul {
-    color: #212f61;
+    color: #0056B3;
 }
-
-#kendoUiMobileApp.km-flat .button-group .km-button.primary {
-    color: #212f61;
+.negro {
+    color: #190d08;
+    margin-bottom: 10px;
+}
+.izquierda {
+    float: left;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.bajar{
+    margin-top: 10px;
+}
+#kendoUiMobileApp.km-flat .km-button.primary {
     background: #fff;
 }
 .km-scroll-container {
@@ -96,7 +140,8 @@ h2.azul {
 }
 .imagenpagina {
     margin: 60px 0;
-    font-style: italic;
+}
+.centro {
     text-align: center;
 }
 .imagenpagina img {
@@ -142,10 +187,20 @@ a.km-listview-link {
 .km-flat li.km-state-active .km-listview-label,
 .km-flat .km-listview-label input[type=radio]:checked,
 .km-flat .km-listview-label input[type=checkbox]:checked {
-    background: #212f61;
+    background: #0056B3!important;
+    color: #fff;
+}
+.km-listview input[type=radio] {
+    right: 0;
+    width: 20px!important;
+    height: 20px;
+}
+.km-listview input[type=radio]:checked,
+.km-listview input[type=checkbox]:checked {
+    background: #0056B3!important;
 }
 .boton {
-    margin-top: 30px;
+    margin-top: 20px;
 }
 .km-flat .km-listview-label input[type=checkbox] {
     border-radius: 30px;
@@ -154,8 +209,8 @@ a.km-listview-link {
     width: 35px!important;
 }
 ul li label span.k-dropdown {
-    border-radius: 0!important;
-    border-bottom: 2px solid #0056B3!important;
+    background: #c9d9eb !important;
+    border-radius: 15px;
     text-align: center!important;
     margin-top: 0px!important;
     width: 100%!important;
@@ -189,5 +244,95 @@ a:hover {
     content: "\e0b3";
 }
 .km-list>li {
-    padding: .8em 1.7em;
+    padding: .6em 1.7em 0 1.7em;
+}
+#tabstrip {
+    width: 90%;
+    margin: auto;
+}
+#tabstrip>ul>li {
+    text-align: center;
+}
+.k-panelbar .k-tabstrip>.k-content,
+.k-tabstrip>.k-content {
+    margin: 0;
+}
+.k-tabstrip-items {
+    padding: 0px;
+}
+.km-flat .km-popup .k-item,
+.km-flat .km-actionsheet>li>a {
+    background: #9abbe2;
+    border-bottom-color: rgba(255, 255, 255, 0);
+    font-size:22px;
+}
+.col-xs-offset-1 {
+    margin-left: 8.33333333%!important;
+}
+.alta {
+    text-transform: uppercase;
+}
+#tabstrip>ul>li.k-state-default span.k-link {
+    background: #f0e42f;
+    color: #fff;
+}
+#tabstrip>ul>li.k-state-default.k-state-active span.k-link {
+    background: #eee;
+    color: #0056B3;
+}
+.k-active-filter,
+.k-state-active,
+.k-state-active:hover,
+.k-tabstrip .k-state-active {
+    border-color: #eee;
+}
+.k-tabstrip .k-content.k-state-active {
+    background: #eee;
+}
+.k-panelbar .k-tabstrip-items .k-state-active,
+.k-tabstrip-items .k-state-active {
+    background-color: #eee;
+}
+.k-block,
+.k-button,
+.k-draghandle,
+.k-grid-header,
+.k-grouping-header,
+.k-header,
+.k-pager-wrap,
+.k-toolbar,
+.k-treemap-tile,
+html .km-pane-wrapper .k-header {
+    background-color: #fff;
+}
+.k-block,
+.k-draghandle,
+.k-inline-block,
+.k-widget {
+    border: none;
+}
+.k-autocomplete.k-state-border-down,
+.k-block > .k-header,
+.k-calendar-container.k-state-border-down,
+.k-dropdown-wrap.k-state-border-down,
+.k-gantt-views.k-state-expanded,
+.k-gantt-views.k-state-expanded > .k-current-view,
+.k-list-container.k-state-border-down,
+.k-multiselect.k-state-border-down,
+.k-numeric-wrap.k-state-border-down,
+.k-panelbar .k-tabstrip-items .k-item,
+.k-picker-wrap.k-state-border-down,
+.k-tabstrip-items .k-item,
+.k-tabstrip-items .k-link,
+.k-window-titlebar {
+    border-radius: 14px 14px 0px 0px;
+}
+.k-tabstrip-items .k-loading {
+    border-top: 0;
+}
+.km-flat .km-list input[type=password], .km-flat .km-list input[type=search], .km-flat .km-list input[type=number], .km-flat .km-list input[type=tel], .km-flat .km-list input[type=url], .km-flat .km-list input[type=email], .km-flat .km-list input[type=month], .km-flat .km-list input[type=color], .km-flat .km-list input[type=week], .km-flat .km-list input[type=date], .km-flat .km-list input[type=time], .km-flat .km-list input[type=datetime], .km-flat .km-list input[type=datetime-local], .km-flat .km-list input[type=text]:not(.k-input), .km-flat .km-list select:not([multiple]), .km-flat .km-list .k-dropdown-wrap, .km-flat .km-list textarea {
+min-width: inherit;
+}
+#cliente{
+    margin-top:240px;
 }
