--- a/BONUS/components/home/view.html
+++ b/BONUS/components/home/view.html
@@ -1,4 +1,4 @@
-<div id="catagolo" data-role="view" data-title="Inicio" data-layout="inicio" data-model="app.home" data-show="app.home.onShow" data-after-show="app.home.afterShow" data-zoom="true">
+<div id="catagolo" data-role="view" data-title="Revista" data-layout="inicio" data-model="app.home" data-show="app.home.onShow" data-after-show="app.home.afterShow" data-zoom="true">
     <!-- START_CUSTOM_CODE_home -->
     <!-- Add custom code here. For more information about custom code, see http://docs.telerik.com/platform/screenbuilder/troubleshooting/how-to-keep-custom-code-changes -->
     <!-- END_CUSTOM_CODE_home -->
