Changes made by enrique malaver (victor.malaver@valmar.com.pe).

--- a/BONUS/components/home/view.html
+++ b/BONUS/components/home/view.html
@@ -28,31 +28,65 @@
     <div id="example">
         <div id="wrap" class="first-page">
             <ul id="book">
-                <!--                 <li><img src="components/pageturn/maserati.jpg" alt="Page 6" />
+                <!--                 <li><img src="components/pageturn/pagina/28.jpg" alt="Page 28" />
                 </li>
-                <li><img src="components/pageturn/mazda.jpg" alt="Page 5" />
+                <li><img src="components/pageturn/pagina/27.jpg" alt="Page 27" />
                 </li>
-                <li><img src="components/pageturn/mercedes.jpg" alt="Page 4" />
+                <li><img src="components/pageturn/pagina/26.jpg" alt="Page 26" />
                 </li>
-                <li><img src="components/pageturn/audi.jpg" alt="Page 3" />
+                <li><img src="components/pageturn/pagina/25.jpg" alt="Page 25" />
                 </li>
-                <li><img src="components/pageturn/ferrari.jpg" alt="Page 2" />
+                <li><img src="components/pageturn/pagina/24.jpg" alt="Page 24" />
                 </li>
-                <li><img src="components/pageturn/imagen2.jpg" alt="Imagen 2" />
+                <li><img src="components/pageturn/pagina/23.jpg" alt="Page 23" />
                 </li>
-                <li><img src="components/pageturn/imagen1.jpg" alt="Imagen 1" />
+                <li><img src="components/pageturn/pagina/22.jpg" alt="Page 22" />
                 </li>
-                <li><img src="components/pageturn/imagen3.png" alt="Imagen 3" />
+                <li><img src="components/pageturn/pagina/21.jpg" alt="Page 21" />
                 </li>
-                <li class="current"><img src="components/pageturn/mini.jpg" alt="Page 1" />
+                <li><img src="components/pageturn/pagina/20.jpg" alt="Page 20" />
+                </li>
+                <li><img src="components/pageturn/pagina/19.jpg" alt="Page 19" />
+                </li>
+                <li><img src="components/pageturn/pagina/18.jpg" alt="Page 18" />
+                </li>
+                <li><img src="components/pageturn/pagina/17.jpg" alt="Page 17" />
+                </li>
+                <li><img src="components/pageturn/pagina/16.jpg" alt="Page 16" />
+                </li>
+                <li><img src="components/pageturn/pagina/15.jpg" alt="Page 15" />
+                </li>
+                <li><img src="components/pageturn/pagina/14.jpg" alt="Page 14" />
+                </li>
+                <li><img src="components/pageturn/pagina/13.jpg" alt="Page 13" />
+                </li>
+                <li><img src="components/pageturn/pagina/12.jpg" alt="Page 12" />
+                </li>
+                <li><img src="components/pageturn/pagina/11.jpg" alt="Page 11" />
+                </li>
+                <li><img src="components/pageturn/pagina/10.jpg" alt="Page 10" />
+                </li>
+                <li><img src="components/pageturn/pagina/9.jpg" alt="Page 9" />
+                </li>
+                <li><img src="components/pageturn/pagina/8.jpg" alt="Page 8" />
+                </li>
+                <li><img src="components/pageturn/pagina/7.jpg" alt="Page 7" />
+                </li>
+                <li><img src="components/pageturn/pagina/6.jpg" alt="Page 6" />
+                </li>
+                <li><img src="components/pageturn/pagina/5.jpg" alt="Page 5" />
+                </li>
+                <li><img src="components/pageturn/pagina/4.jpg" alt="Page 4" />
+                </li>
+                <li><img src="components/pageturn/pagina/3.jpg" alt="Page 3" /> 
                 </li> -->
-                <li><img src="components/pageturn/4.jpg" alt="Page 4" />
+                <!--                 Imagen 3 pesada al 100%   -->
+                <li><img src="components/pageturn/pagina2/3.jpg" alt="Page 3" />
                 </li>
-                <li><img src="components/pageturn/3.jpg" alt="Page 3" />
+                 <!--                 Imagen 1, 2 pesada al 70%   -->
+                <li><img src="components/pageturn/pagina2/2.jpg" alt="Page 2" />
                 </li>
-                <li><img src="components/pageturn/2.jpg" alt="Page 2" />
-                </li>
-                <li class="current"><img src="components/pageturn/1.jpg" alt="Page 1" />
+                <li class="current"><img src="components/pageturn/pagina2/1.jpg" alt="Page 1" />
                 </li>
             </ul>
             <a href="#" id="previous">Previous page</a>
@@ -128,7 +162,6 @@
             #wrap {
                 /*                 Se comentó esto a pedido de Jhon */
                 /*                 background-image: url("components/pageturn/book.png"); */
-                
                 background-repeat: no-repeat;
                 background-size: 100% 100%;
                 width: 375px;
