--- a/BONUS/components/home/view.html
+++ b/BONUS/components/home/view.html
@@ -1,13 +1,12 @@
-<div id="catagolo" data-role="view" data-title="Revista" data-layout="inicio" data-model="app.home" data-show="app.home.onShow" data-after-show="app.home.afterShow" data-zoom="true">
+<div id="catagolo" data-role="view" data-title="Revista" data-layout="inicio" data-model="app.home" data-init="app.home.onShow" data-after-show="app.home.afterShow" data-zoom="true">
     <!-- START_CUSTOM_CODE_home -->
     <!-- Add custom code here. For more information about custom code, see http://docs.telerik.com/platform/screenbuilder/troubleshooting/how-to-keep-custom-code-changes -->
     <!-- END_CUSTOM_CODE_home -->
     <!--div id="fondoinicio">
         <img src="img/imagen-de-ingreso.png" style="width:100%" />
     </div>
-    <div id="inicio">
-
-        <form class="formulario form-group">
+    <div id="inicio"> 
+		<form class="formulario form-group">
             <ul class="form-content" data-role="listview" data-style="inset">
                 <li class="col-xs-8 col-xs-offset-2">
                     <label>Usuario
@@ -26,9 +25,9 @@
         </form>
     </div-->
     <div id="example">
-        <div id="wrap" class="first-page">
+        <div id="wrap" class="first-page"> 
             <ul id="book">
-                                <li><img src="components/pageturn/pagina/28.jpg" alt="Page 28" />
+                <li><img src="components/pageturn/pagina/28.jpg" alt="Page 28" />
                 </li>
                 <li><img src="components/pageturn/pagina/27.jpg" alt="Page 27" />
                 </li>
@@ -63,7 +62,7 @@
                 <li><img src="components/pageturn/pagina/12.jpg" alt="Page 12" />
                 </li>
                 <li><img src="components/pageturn/pagina/11.jpg" alt="Page 11" />
-                </li>
+                </li> 
                 <li><img src="components/pageturn/pagina/10.jpg" alt="Page 10" />
                 </li>
                 <li><img src="components/pageturn/pagina/9.jpg" alt="Page 9" />
@@ -78,7 +77,7 @@
                 </li>
                 <li><img src="components/pageturn/pagina/4.jpg" alt="Page 4" />
                 </li>
-                <li><img src="components/pageturn/pagina/3.jpg" alt="Page 3" /> 
+                <li><img src="components/pageturn/pagina/3.jpg" alt="Page 3" />
                 </li>
                 <li><img src="components/pageturn/pagina/2.jpg" alt="Page 2" />
                 </li>
@@ -113,7 +112,7 @@
                 $("#wrap").toggleClass("first-page", page == 1)
                     .toggleClass("last-page", page == pagesCount);
 
-                if (page != currentIndex) {
+                if (page != currentIndex) { 
                     current.removeClass("current");
                     newPage = pages.eq(pagesCount - page).addClass("current");
 
@@ -132,7 +131,7 @@
 
             $("#next").click(function (e) {
                 e.preventDefault();
-                current(Math.min(4, current() + 1));
+                current(Math.min(20, current() + 1));
             });
             $("#wrap").kendoTouch({
                 enableSwipe: true,
@@ -140,7 +139,7 @@
                     if (e.direction == "left") {
                         e.preventDefault();
                         //Si colocamos Math.min(...  mas de la cantidad de imágenes regresa al incio en el final  
-                        current(Math.min(4, current() + 1));
+                        current(Math.min(20, current() + 1));
                     } else {
                         e.preventDefault();
                         current(Math.max(1, current() - 1));
