--- a/BONUS/components/home/Copy of view.html
+++ b/BONUS/components/home/Copy of view.html
@@ -25,53 +25,53 @@
         </form>
     </div-->
     <div id="example">
-        <div id="wrap" class="first-page">
+        <div id="wrap" class="first-page"> 
             <ul id="book">
-                <li><img alt="Page 28" />
+                <li><img src="components/pageturn/pagina/28.jpg" alt="Page 28" />
                 </li>
-                <li><img alt="Page 27" />
+                <li><img src="components/pageturn/pagina/27.jpg" alt="Page 27" />
                 </li>
-                <li><img alt="Page 26" />
+                <li><img src="components/pageturn/pagina/26.jpg" alt="Page 26" />
                 </li>
-                <li><img alt="Page 25" />
+                <li><img src="components/pageturn/pagina/25.jpg" alt="Page 25" />
                 </li>
-                <li><img alt="Page 24" />
+                <li><img src="components/pageturn/pagina/24.jpg" alt="Page 24" />
                 </li>
-                <li><img alt="Page 23" />
+                <li><img src="components/pageturn/pagina/23.jpg" alt="Page 23" />
                 </li>
-                <li><img alt="Page 22" />
+                <li><img src="components/pageturn/pagina/22.jpg" alt="Page 22" />
                 </li>
-                <li><img alt="Page 21" />
+                <li><img src="components/pageturn/pagina/21.jpg" alt="Page 21" />
                 </li>
-                <li><img alt="Page 20" />
+                <li><img src="components/pageturn/pagina/20.jpg" alt="Page 20" />
                 </li>
-                <li><img alt="Page 19" />
+                <li><img src="components/pageturn/pagina/19.jpg" alt="Page 19" />
                 </li>
-                <li><img alt="Page 18" />
+                <li><img src="components/pageturn/pagina/18.jpg" alt="Page 18" />
                 </li>
-                <li><img alt="Page 17" />
+                <li><img src="components/pageturn/pagina/17.jpg" alt="Page 17" />
                 </li>
-                <li><img alt="Page 16" />
+                <li><img src="components/pageturn/pagina/16.jpg" alt="Page 16" />
                 </li>
-                <li><img alt="Page 15" />
+                <li><img src="components/pageturn/pagina/15.jpg" alt="Page 15" />
                 </li>
-                <li><img alt="Page 14" />
+                <li><img src="components/pageturn/pagina/14.jpg" alt="Page 14" />
                 </li>
-                <li><img alt="Page 13" />
+                <li><img src="components/pageturn/pagina/13.jpg" alt="Page 13" />
                 </li>
-                <li><img alt="Page 12" />
+                <li><img src="components/pageturn/pagina/12.jpg" alt="Page 12" />
                 </li>
-                <li><img alt="Page 11" />
+                <li><img src="components/pageturn/pagina/11.jpg" alt="Page 11" />
+                </li> 
+                <li><img src="components/pageturn/pagina/10.jpg" alt="Page 10" />
                 </li>
-                <li><img alt="Page 10" />
+                <li><img src="components/pageturn/pagina/9.jpg" alt="Page 9" />
                 </li>
-                <li><img alt="Page 9" />
+                <li><img src="components/pageturn/pagina/8.jpg" alt="Page 8" />
                 </li>
-                <li><img alt="Page 8" />
+                <li><img src="components/pageturn/pagina/7.jpg" alt="Page 7" />
                 </li>
-                <li><img alt="Page 7" />
-                </li>
-                <li><img alt="Page 6" />
+                <li><img src="components/pageturn/pagina/6.jpg" alt="Page 6" />
                 </li>
                 <li><img src="components/pageturn/pagina/5.jpg" alt="Page 5" />
                 </li>
@@ -93,7 +93,7 @@
             $("#book").css("height", ($(window).height() - 60) + "px");
 
             function current(page) {
-
+                
 
                 var book = $("#book"),
                     pages = book.children(),
@@ -114,16 +114,15 @@
                     .toggleClass("last-page", page == pagesCount);
 
                 if (page != currentIndex) {
+                    
+                    console.log(currentIndex);
                     current.removeClass("current");
                     newPage = pages.eq(pagesCount - page).addClass("current");
-                    var index = currentIndex + 1;
+
                     if (page > currentIndex) {
                         kendo.fx(book).pageturnHorizontal(current, newPage).duration(1500).play();
                     } else {
                         kendo.fx(book).pageturnHorizontal(newPage, current).duration(1500).reverse();
-                    }
-                    if (!$('img[alt="Page ' + index + '"]').attr("src")) {
-                        $('img[alt="Page ' + index + '"]').attr("src", "components/pageturn/pagina/" + index + ".jpg");
                     }
                 }
             }
